Edited wiki page through web user interface.

--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -1,6 +1,8 @@
 #summary Sidebar
 #sidebar DefaultSidebar
 
+FAQ
+
   * Compatibility Plugins
     * [CR_ReSharperCompatibility] 
   * Refactoring Plugins
