--- a/wiki/Feedback.wiki
+++ b/wiki/Feedback.wiki
@@ -1,8 +1,8 @@
 #summary A couple of ways to provide feedback on the plugins:
 === Issues ===
-In most cases, the !DevExpress Support Center is *not* the correct location issues about our plugins. The authors of these plugins have no access to that site. 
+The !DevExpress Support Center is *not* the correct location for issues with community plugins. The authors of these plugins have no access to that site. 
 
-If you have an issue with a community plugin, please check our [http://code.google.com/p/dxcorecommunityplugins/issues/list list of current issues] and if yours is not detailed then perhaps [http://code.google.com/p/dxcorecommunityplugins/issues/entry add a new one]
+If you have an issue with a community plugin, please check our [http://code.google.com/p/dxcorecommunityplugins/issues/list list of issues] and if yours is not listed then perhaps [http://code.google.com/p/dxcorecommunityplugins/issues/entry add a new one]
 
 === Forum ===
 Developer Express have been kind enough to allow us to use their [http://community.devexpress.com/forums/181.aspx 'DXCore Plugins' forum] for any discussions pertaining to the plugins on this site.
