Edited wiki page through web user interface.

--- a/wiki/JorgeRowies.wiki
+++ b/wiki/JorgeRowies.wiki
@@ -3,7 +3,8 @@
 = About Me =
 
 I'm a developer from Buenos Aires, Argentina. I've been using CodeRush for about a couple of years now and I recently discovered the amazing power that the CodeRush plugin API has, so I decided to make some plugins that could make my every-day job a little easier ;)
-You can find more about me in my [http://www.google.com/profiles/112793085536273063424 google profile]
+
+You can find more about me in my [http://www.google.com/profiles/jorge.rowies google profile] or in my [http://jorgerowies.blogspot.com/ blog]
 
 = Plugins =
 This is the list of plugins I've made so far, please feel free to report me any problem you may encounter
