--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -17,7 +17,8 @@
     * [DX_MoveCode]
   * !CodeIssue Plugins
     * [CR_StackOverflowIssues]
-    * [CR_StyleNinja] 
+    * [CR_StyleNinja]
+    * [CodeIssueAnalysis] 
   * VS Dialog Replacements
     * [CR_QuickAddReference]
   * Organizational Plugins
