Edited wiki page through web user interface.

--- a/wiki/FrontPage.wiki
+++ b/wiki/FrontPage.wiki
@@ -9,7 +9,7 @@ You have a few options available:
 <table border="0">
 <tr>
 <td valign="Top">
- <a href="http://code.google.com/p/dxcorecommunityplugins/wiki/Prerequisites" title="TestTitle"> http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Prerequisites.png</a>
+ <a href="http://code.google.com/p/dxcorecommunityplugins/wiki/Prerequisites" title="Find out about the prerequisites for using the plugins on this site">http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Prerequisites.png</a>
 </td>
 <td valign="Top">
  [http://code.google.com/p/dxcorecommunityplugins/wiki/GetPlugins http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/GetPlugins.png]
@@ -20,7 +20,7 @@ You have a few options available:
  [http://code.google.com/p/dxcorecommunityplugins/wiki/GetSource http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/GetSource.png]
 </td>
 <td valign="Top">
- [http://code.google.com/p/dxcorecommunityplugins/wiki/WritePlugin http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/WritePlugin.png]
+ <a href="http://code.google.com/p/dxcorecommunityplugins/wiki/WritePlugin" title="Find out about resources to help you write your own plugin"> http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/WritePlugin.png</a>
 </td>
 </tr>
 </table>
