--- a/wiki/RoryBecker.wiki
+++ b/wiki/RoryBecker.wiki
@@ -18,6 +18,7 @@ Here are some links to some of the plugins I have written:
  * [CR_CreateDelegate]
  * [CR_ClearAllMarkers]
  * [CR_LinkBar]
+ * [CR_ClearAllMarkers]
 
 </td><td>
  * [CR_ReSharperCompatibility] 
